Lesson_5/deployment-redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine5
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: redmine5
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redmine5
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine5
        ports:
        - containerPort: 3000
          protocol: TCP
