Lesson_5/service-redmine.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine5
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: redmine5
  type: ClusterIP
