Lesson_5/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules: 
  - http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redmine5
            port:
              number: 3000
